<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_nav_cat"
            android:title="@string/kategori" />
        <item
            android:id="@+id/nav_search"
            android:onClick="buttonClicked"
            android:icon="@drawable/ic_search"
            android:title="@string/cari" />

    </group>
    <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info"
                android:title="@string/tentang" />
    </group>

</menu>